--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body{
 /*header*/
 header{
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.20) 100%), linear-gradient(105deg, #001A5D 27.56%, #0037C3 78.25%, #0051EF 99.41%);
-    height: 778px;
+    height: 750px;
     color: white;
     padding: 42px 120px 0px 120px;
 
@@ -62,6 +62,7 @@ h1, h2, h3, h4{
 }
 
 .cta{
+    border:none;
     text-decoration: none;
     color: #28001E;
     font-family: Montserrat;
@@ -81,5 +82,56 @@ h1, h2, h3, h4{
 
 .navegacao{
     justify-content: space-between;
+}
+
+/*main*/
+main{
+    font-family: Montserrat;
+    color: #28001E;
+    font-weight: 500;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+main h3{
+    font-size: 40px;
+    margin: 64px 0 48px 0;
+}
+
+main h4{
+    font-size: 20px;
+}
+
+main p{
+    font-family: "Open Sans";
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.card{
+    width: 280px;
+    height: 280px;
+    border-radius: 15px;
+    border: 2px solid #001A5D;
+    padding:2px;
+}
+.funcionalidades{
+    width: 995px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px 42px;
+}
+
+section{
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.sobre p{
+    text-align: left;
+    width: 378px;
+    font-size: 24px;
 }
 
